Fixed quotes and spacing

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import '~@angular/material/theming';
+@import "~@angular/material/theming";
 @include mat-core();
 
 $candy-app-primary: mat-palette($mat-red, 900);
@@ -10,11 +10,11 @@ $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-
 
 /** ================================================ */
 
-$material-icons-font-path: '~material-icons/iconfont/';
-@import '~material-icons/iconfont/material-icons.scss';
+$material-icons-font-path: "~material-icons/iconfont/";
+@import "~material-icons/iconfont/material-icons.scss";
 
 /** ================================================ */
-* { font-family: 'Segoe UI', Tahoma, Verdana, sans-serif; }
+* { font-family: "Segoe UI", Tahoma, Verdana, sans-serif; }
 body { margin: 0; }
 
 .container {
